<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimerSheets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timer_add">Create New Timer</string>
    <string name="title_activity_create_timer">CreateTimer</string>

    <string name="name_label">Name: </string>
    <string name="new_timer_name_hint">i.e. \"droid \'grammin\"</string>
    <string name="type_label">Type: </string>
    <string name="new_timer_type_hint">Optional Category</string>

    <string name="confirm_create">Add to Sheet</string>

    <string name="timer_start">Go</string>
    <string name="timer_stop">Stop</string>

</resources>
